--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
